fix: finish css and adjustments

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 *{
-    margin: 0;
+    margin: 2px;
     padding: 0;
     box-sizing: border-box;
     -webkit-font-smoothing: antialiased;
@@ -12,4 +12,79 @@
 
 body{
     font-size: 1.6rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: #e5fff9;
+}
+#titulo{
+    text-align: center;
+}
+.info1{
+    display: flex;
+    flex-direction: column;
+}
+input[type="text"], input[type="email"], select{
+    border: 1px solid black;
+    border-radius: 5px;
+    height: 35px;
+}
+fieldset{
+    border: none;
+    width: 40vw;
+}
+.senioridade{
+    display: flex;
+    flex-direction: column;
+}
+label{
+    font-size: 2rem;
+}
+.exp{
+    display: flex;
+    flex-direction: column;
+}
+button{
+    text-align: center;
+    width: 20%;
+    align-self: center;
+    margin: 2rem;
+    height: 35px;
+    border: 1px solid black;
+    transition:  ease-in-out;
+    background-color: #e5fff9;
+    border-radius: 5px;
+
+}
+[type="checkbox"], [type="radio"]{
+    height: 20px;
+    width: 20px;
+}
+[type="checkbox"]:checked{
+    background-color: blue;
+}
+input[type="text"], input[type="email"], select, textarea, button{
+    box-shadow: 4px 3px 5px -1px rgba(0,3,2,1);
+}
+button:active{
+    transform: translateY(4px);
+}
+span{
+    padding-left: 5px;
+}
+.format{
+    padding: 5px 0;
+    font-size: 2.5rem;
+    font-weight: 700;
+}
+textarea{
+    margin-top: -10px;
+    border-radius: 5px;
+    border: 1px solid black;
+    overflow: hidden;
+}
+textarea:focus{
+    border: 0;
 }
