--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ button{
 }
 input[type="text"], input[type="email"], select, textarea, button{
     box-shadow: 4px 3px 5px -1px rgba(0,3,2,1);
+    outline: none;
 }
 button:active{
     transform: translateY(4px);
@@ -84,7 +85,4 @@ textarea{
     border-radius: 5px;
     border: 1px solid black;
     overflow: hidden;
-}
-textarea:focus{
-    border: 0;
 }
