--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ label{
 }
 button{
     text-align: center;
-    width: 20%;
+    width: 25%;
     align-self: center;
     margin: 2rem;
     height: 35px;
@@ -56,7 +56,6 @@ button{
     transition:  ease-in-out;
     background-color: #e5fff9;
     border-radius: 5px;
-
 }
 [type="checkbox"], [type="radio"]{
     height: 20px;
@@ -71,12 +70,13 @@ input[type="text"], input[type="email"], select, textarea, button{
 }
 button:active{
     transform: translateY(4px);
+    background-color: #159c7d;
 }
 span{
     padding-left: 5px;
 }
 .format{
-    padding: 5px 0;
+    padding: 2px 0;
     font-size: 2.5rem;
     font-weight: 700;
 }
