--- a/style.css
+++ b/style.css
@@ -11,12 +11,12 @@
 }
 
 body{
-    font-size: 1.6rem;
+
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    overflow: hidden;
     background-color: #e5fff9;
 }
 #titulo{
@@ -30,10 +30,13 @@ input[type="text"], input[type="email"], select{
     border: 1px solid black;
     border-radius: 5px;
     height: 35px;
+    font-size: 2rem;
 }
 fieldset{
     border: none;
-    width: 40vw;
+}
+.wrapper{
+    margin: 0 10%;
 }
 .senioridade{
     display: flex;
@@ -48,7 +51,7 @@ label{
 }
 button{
     text-align: center;
-    width: 25%;
+    width: 30%;
     align-self: center;
     margin: 2rem;
     height: 35px;
@@ -56,6 +59,11 @@ button{
     transition:  ease-in-out;
     background-color: #e5fff9;
     border-radius: 5px;
+    overflow: hidden;
+}
+button:active{
+    transform: translateY(4px);
+    background-color: #159c7d;
 }
 [type="checkbox"], [type="radio"]{
     height: 20px;
@@ -68,21 +76,46 @@ input[type="text"], input[type="email"], select, textarea, button{
     box-shadow: 4px 3px 5px -1px rgba(0,3,2,1);
     outline: none;
 }
-button:active{
-    transform: translateY(4px);
-    background-color: #159c7d;
-}
+
 span{
     padding-left: 5px;
 }
 .format{
     padding: 2px 0;
-    font-size: 2.5rem;
+    font-size: 2rem;
     font-weight: 700;
 }
 textarea{
+    width: 100%;
     margin-top: -10px;
     border-radius: 5px;
     border: 1px solid black;
     overflow: hidden;
+    font-size: 2rem;
+    resize: none;
+}
+
+@media (max-width: 750px) {
+    body {
+      overflow-y: auto;
+    }
+  }
+  @media (max-width: 400px) {
+        .info1 input, .info1 label, .info2{
+            display: flex;
+            flex-wrap: wrap;
+    }
+}
+
+@media (max-width: 600px){
+    .check{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .wrapper{
+        min-width: 100%;
+        margin: 0 auto;
+    }
 }
